--- a/index.html
+++ b/index.html
@@ -54,12 +54,38 @@
  	<li>This is unordered list tag</li>
  	<li>This is unordered list tag</li>
  </ul> -->
- <ol type="I">
+ <!-- <ol type="I">
  	<li>This is ordered list tag</li>
  	<li>This is ordered list tag</li>
  	<li>This is ordered list tag</li>
  	<li>This is ordered list tag</li>
- </ol>
+ </ol> -->
+ <form action="hello.html" method="">
+ <label for="">Chon dia diem ban dang song!</label>
+ <input type="text" placeholder="Ban dang song o dau?">
+ 	<!-- <input type="number"> -->
+ 	<!-- <input type="file"> -->
+ 	<!-- <input type="date"> -->
+ 	<!-- <input type="checkbox"> -->
+ 	<!-- <input name="gender" type="radio">Nam
+ 	<input name="gender" type="radio">NU
+ 	<input name="gender" type="radio">LGBT -->
+ 	<!-- <input type="submit"> -->
+ 	<!-- <input type="hidden"> -->
+ 	<!-- <input type="range"> -->
+ 	<!-- <input type="color"> -->
+ 	<!-- <input type="text" value="Enter here.."> -->
+ 	<select>
+ 		<option value="">Ha Noi</option>
+ 		<option value="">HCM</option>
+ 		<option value="" selected>Nam Dinh</option>
+ 	</select>
+ 	<br>
+ 	<!-- <input type="submit" value="click me" > -->
+ 	<textarea name="" id="" cols="5" rows="5" class=""></textarea>
+ 	<label for="label">Click to register</label>
+ 	<button type="button">Click me</button>
+ </form>
 
 
 </div>
